if(CLIENT_ONLY)
add_subdirectory(pybind11)
pybind11_add_module(serving_client src/general_model.cpp src/pybind_general_model.cpp)
target_link_libraries(serving_client PRIVATE -Wl,--whole-archive utils sdk-cpp pybind python -Wl,--no-whole-archive -lpthread -lcrypto -lm -lrt -lssl -ldl -lz)
file(GLOB so ${PADDLE_SERVING_BINARY_DIR}/core/general-client/serving_client.*)
file(RENAME ${so} ${PADDLE_SERVING_BINARY_DIR}/core/general-client/serving_client.so)
endif()
